@@ -7,6 +7,7 @@ S3method(print,featureCounts)
 S3method(print,fq)
 S3method(print,pedMap)
 S3method(print,vcf)
+S3method(summary,STARLog)
 S3method(summary,bed)
 S3method(summary,fa)
 S3method(summary,featureCounts)
