@@ -10,6 +10,7 @@ Version 0.1.5.x:
 1: importFA does not rely on alternating rows anymore
 2: importSTARLog imports now more statistics and is able to import recursively several log files
 3: plot.totalReads function added
+4: summary.STARLog function added
 
 Version 0.1.4 (Stable Version):
 * Improvements of summary functions
